--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,58 @@
 .App {
   /* text-align: center; */
   /* background-color: #800020; */
+  font-size:170%;
 }
 
 .about-me {
   margin-left: 6cm;
   margin-right: 6cm;
-  /* margin-bottom: 500px; */
-  margin-top: 50px;
+  /* margin-bottom: 6cm; */
+  margin-top: 1cm;
   padding: 2cm;
+  /* opacity: .4 */
 }
-
-/* .about-me-text {
-  margin-left: 100px;
-} */
 
 .center {
   text-align: center;
 }
 
 .home {
-  margin: 7cm;
+  margin-left: 7cm;
+  margin-right: 7cm;
+  margin-top: 3cm;
+  margin-bottom: 8cm;
   padding: 3cm;
 }
+
+.hr {
+  margin-left: 6cm;
+  margin-right: 6cm;
+}
+
+.large-header {
+  font-size: 250%;
+}
+
+.left-align {
+  margin-left: 6cm;
+}
+
+/* .project-card {
+  opacity: .8
+}
+
+.project-card:hover {
+  opacity: 1
+} */
 
 .socials {
   margin: 30px;
   bottom: 0;
   position:fixed
 }
+
+.small-header {
+  font-size: 100%;
+}
+
