moved logo to center

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 .home {
   margin-left: 7cm;
   margin-right: 7cm;
-  margin-top: 3cm;
+  /* margin-top: 3cm; */
   margin-bottom: 8cm;
   padding: 3cm;
 }
