added smaller logo after card flip

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 .home {
   margin-left: 7cm;
   margin-right: 7cm;
-  margin-top: 4cm;
+  margin-top: 1cm;
   margin-bottom: 8cm;
   padding: 3cm;
 }
@@ -28,6 +28,10 @@
 .home-logo {
   margin-top: 4.5cm;
   margin-bottom: 8cm;
+}
+
+.home-card-logo {
+  margin-top: 0.5cm;
 }
 
 .hr {
