--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   /* text-align: center; */
   /* background-color: #800020; */
-  font-size:170%;
+  font-size: 170%;
 }
 
 .about-me {
@@ -58,7 +58,7 @@
 .socials {
   margin: 30px;
   bottom: 0;
-  position:fixed
+  position: fixed;
 }
 
 .small-header {
